--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -9,7 +9,7 @@
 
 
 <div class="form-group">
-  <%= f.label :password, , "New password" ,class: 'col-lg-2 control-label' %>
+  <%= f.label :password,  "New password" ,class: 'col-lg-2 control-label' %>
   <div class="col-lg-4">
     <%= f.password_field :password, autocomplete: "new-password", size: 25, class: "form-control" %> <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em> <% end %>
