--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,6 @@
 <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form-horizontal' }) do |f| %>
+<%= form_for(@user, url: {controller: 'passwords', action: 'new_password'}, html: { method: :get, class: 'form-horizontal' }) do |f| %>
 
 <fieldset>
   <legend>Forgot your password ?</legend>
@@ -16,7 +16,7 @@
 
   <div class="form-group">
     <div class="col-lg-10 col-lg-offset-2">
-      <%= f.submit "Send me reset password instructions", class: 'btn btn-primary' %>   
+      <%= f.submit "Send me reset password instructions", class: 'btn btn-primary' %>
     </div>
   </div>
 
