--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,6 +11,9 @@
    		</div>
    		<div id="navbar" class="collapse navbar-collapse">
    			<ul class="nav navbar-nav navbar-right">
+          <li>
+            <%= link_to "Game", game_index_path %>
+          </li>
    				<% if user_signed_in? %>
    				
    				<li>
