--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,9 @@
-@import "bootstrap-sprockets";
 @import "bootstrap";
-
-
-@import "bootswatch/cerulean/variables";
 @import "bootstrap";
-
 .m-body { padding-top: 120px; }
-
-@import "bootswatch/cerulean/bootswatch";
-
 @import "base";
+@import "index.css";
+@import "master_a-master.css";
+@import "site_global.css";
+@import "font-awesome.min.css";
+@import "font-awesome-ie7.min.css";
