--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
 	<%= javascript_include_tag 'application' %>
 </head>
 
-<body class="m-body">
+<body>
 
-	<%= render 'layouts/nav' %>
+	<%#= render 'layouts/nav' %>
 
 	<div class="container">
 		<% if notice %>
