contact, master and entrry layout implement

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,4 @@
 @import "bootstrap";
-@import "bootstrap";
 .m-body { padding-top: 120px; }
 @import "base";
 @import "index.css";
@@ -7,3 +6,6 @@
 @import "site_global.css";
 @import "font-awesome.min.css";
 @import "font-awesome-ie7.min.css";
+@import "master_b-master.css";
+@import "contacts.css";
+@import "bootstrap.css";
