--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,74 @@
 <html>
 <head>
 	<title>StripPals</title>
-	<%= csrf_meta_tags %>
 
 	<%= stylesheet_link_tag    'application', media: 'all' %>
 	<%= javascript_include_tag 'application' %>
+  <%= image_tag('home-favicon.ico')%>
+  <title>Home</title>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <style type="text/css">
+    .justify {
+      text-align: justify;
+      text-justify: inter-word;
+    }
+  </style>
+  <style type="text/css">
+    .cnt{
+      text-align: center;
+      text-justify: inter-word;
+    }
+  </style>
+  <script type="text/javascript">
+      document.documentElement.className += ' js';
+  </script>
+  <![endif]-->
+  <!--custom head HTML-->
+  <script>
+      ;
+      (function ($) {
+          var o = $('html');
+          if (o.hasClass('desktop')) {
+              include('jquery.mousewheel.min.js');
+              include('jquery.simplr.smoothscroll.min.js');
+
+              $(document).ready(function () {
+                  $.srSmoothscroll({
+                      step: 150,
+                      speed: 800
+                  });
+              });
+          }
+      })(jQuery);
+  </script>
+
+  <style>
+    a, div, p, h1, h2, h3, h4, h5, .Button, img, .submit-btn {
+      -moz-transition: 0.6s;
+      -o-transition: 0.6s;
+      -webkit-transition: 0.6s;
+      transition: 0.6s;
+    }
+    @font-face {
+      font-family: myfont;
+      src: url("<%= asset_path('CANDARAZ.woff')%>");
+    }
+  </style>
+
+  <!--HTML Widget code-->
+
+  <!--[if gte IE 8] -->
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+  <!-- <![endif]-->
+  <!--[if IE 7]>
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome-ie7.min.css" rel="stylesheet">
+  <![endif]-->
+  <style>
+    .icon-block:before, .icon-block {
+      display: block;
+    }
+  </style>
 </head>
 
 <body>
@@ -14,10 +78,10 @@
 
 	<div class="container">
 		<% if notice %>
-		<p class="alert alert-success"><%= notice %></p>
+		  <p class="alert alert-success"><%= notice %></p>
 		<% end %>
 		<% if alert %>
-		<p class="alert alert-danger"><%= alert %></p>
+		   <p class="alert alert-danger"><%= alert %></p>
 		<% end %>
 		<%= yield %>
 	</div>
