--- a/app/views/games_master/index.html.erb
+++ b/app/views/games_master/index.html.erb
@@ -28,21 +28,21 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-6">
-      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><a href="entry.html" target="_blank">ACE Playing Modes</a></h2>
+      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><%=link_to "ACE Playing Modes", entries_index_path, target: :_blank %></h2>
       <p>Five Games</p>
       <p>The first player to win three games is the winner and the other player must strip.</p>
       <p>Second Chance.</p>
       <p>Two more games are available for the losing player to get even!! Or to play another mode.</p>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-6">
-      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><a href="entry.html" target="_blank">KING Playing Mode</a></h2>
+      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><%=link_to "ACE KING Playing Mode", entries_index_path, target: :_blank %></h2>
       <p>Three Games</p>
       <p>The first player to win two games is the winner and the other player must strip.</p>
       <p>Second Chance.</p>
       <p>Another game is available for the losing player to get even!! Or to play another mode</p>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-6">
-      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><a href="entry.html" target="_blank">Queen Playing Mode</a></h2>
+      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><%=link_to "Queen Playing Mode", entries_index_path, target: :_blank %></h2>
       <p>Two Games</p>
       <p>Each player wears one piece of clothing and the losing player removes that piece of clothing after each losing  hand.</p>
       <p>Second Chance.</p>
