--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -184,12 +184,14 @@
           </div>
         </div>
       </div>
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u826" href="chat/login.php"><!-- group -->
+      <%=link_to  new_user_session_path , class: "nonblock nontext rgba-background clearfix grpelem", id: "u826"  do %>
+<!--      <a class="nonblock nontext rgba-background clearfix grpelem" id="u826" href="chat/login.php"><!-- group -->
         <div class="grpelem" id="u828"><!-- custom html --><i class="icon-thumbs-up-alt icon-block" style="line-height:105px;"></i></div><div class="clearfix grpelem" id="u832-6"><!-- content -->
           <span>Chat</span>
           <span>Room 1</span>
         </div>
-      </a>
+<!--      </a>-->
+      <%end %>
       <a class="nonblock nontext rgba-background clearfix grpelem" id="u827" href="chat-non-english/login.php"><!-- group -->
         <div class="grpelem" id="u830"><!-- custom html --><i class="icon-flag icon-block" style="line-height:105px;"></i></div><div class="clearfix grpelem" id="u833-6"><!-- content -->
           <span>Chat</span>
