--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,6 +77,12 @@
 	<%#= render 'layouts/nav' %>
 
 	<div class="container">
+
+    <% if user_signed_in? %>
+      <li>
+        <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+      </li>
+    <%end %>
 		<% if notice %>
 		  <p class="alert alert-success"><%= notice %></p>
 		<% end %>
