--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
 	<%= javascript_include_tag 'application' %>
   <%= image_tag('home-favicon.ico')%>
   <title>Home</title>
+<!--  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
+<!--  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">-->
+<!--  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">-->
+<!--  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>-->
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <style type="text/css">
@@ -75,14 +79,15 @@
 <body>
 
 	<%#= render 'layouts/nav' %>
-
 	<div class="container">
-
-    <% if user_signed_in? %>
-      <li>
-        <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
-      </li>
-    <%end %>
+    <%# if request.env['PATH_INFO'] == chats_index_path %>
+    <%#else %>
+        <% if user_signed_in? %>
+          <li>
+            <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+          </li>
+        <%end %>
+    <%# end %>
 		<% if notice %>
 		  <p class="alert alert-success"><%= notice %></p>
 		<% end %>
