--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -184,7 +184,7 @@
           </div>
         </div>
       </div>
-      <%=link_to  chats_index_path , class: "nonblock nontext rgba-background clearfix grpelem", id: "u826"  do %>
+      <%=link_to  new_user_session_path , class: "nonblock nontext rgba-background clearfix grpelem", id: "u826"  do %>
 <!--      <a class="nonblock nontext rgba-background clearfix grpelem" id="u826" href="chat/login.php"><!-- group -->
         <div class="grpelem" id="u828"><!-- custom html --><i class="icon-thumbs-up-alt icon-block" style="line-height:105px;"></i></div><div class="clearfix grpelem" id="u832-6"><!-- content -->
           <span>Chat</span>
