--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,59 +1,36 @@
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Learn how to use the Firebase platform on the Web">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Friendly Chat</title>
+<link rel="manifest" href="<%= asset_path 'manifest.json' %>">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
+<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 
-  <!-- Disable tap highlight on IE -->
-  <meta name="msapplication-tap-highlight" content="no">
+<!-- App Styling -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
 
-  <!-- Web Application Manifest -->
-<!--  <link rel="manifest" href="manifest.json">-->
-  <link rel="manifest" href="<%= asset_path 'manifest.json' %>">
-
-  <!-- Add to homescreen for Chrome on Android -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="Friendly Chat">
-  <meta name="theme-color" content="#303F9F">
-
-  <!-- Add to homescreen for Safari on iOS -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Friendly Chat">
-  <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
-
-  <!-- Tile icon for Win8 -->
-  <meta name="msapplication-TileColor" content="#3372DF">
-  <meta name="msapplication-navbutton-color" content="#303F9F">
-
-  <!-- Material Design Lite -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
-  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-
-  <!-- App Styling -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-<!--  <link rel="stylesheet" href="styles/main.css">-->
-</head>
 <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-  <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-      <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
-        <h3><i class="material-icons">chat_bubble_outline</i> Friendly Chat</h3>
-      </div>
-      <div id="user-container">
-        <div hidden id="user-pic"></div>
-        <div hidden id="user-name"></div>
-        <button hidden id="sign-out" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
-<!--          Sign-out-->
-        </button>
-        <button hidden id="sign-in" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
-<!--          <i class="material-icons">account_circle</i>Sign-in-->
-        </button>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light my-navbar">
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <div class="row">
+        <h5 class="col-md-3"><i class="material-icons">chat_bubble_outline</i> Friendly Chat</h5>
+        <ul class="navbar-nav ml-auto my--ul" style="float: right;">
+          <li class="nav-item active">
+            <%= link_to('Home', root_path, class: "nav-link", style: 'color:black;') %>
+            &nbsp;
+          </li>
+          <% if user_signed_in? %>
+            <li class="nav-item">
+              <%= link_to('Logout', destroy_user_session_path, class: "nav-link",style: 'color:black;', method: :delete) %>
+            </li>
+          <%else %>
+            <li class="nav-item">
+              <%= link_to('SignIn', new_user_session_path, class: "nav-link", style: 'color:black;') %>
+            </li>
+          <%end %>
+        </ul>
       </div>
     </div>
-  </header>
+  </nav>
+
 
   <main class="mdl-layout__content mdl-color--grey-100">
     <div id="messages-card-container" class="mdl-cell mdl-cell--12-col mdl-grid">
@@ -82,6 +59,19 @@
         </div>
       </div>
 
+      <div id="messages-card" class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--6-col-tablet mdl-cell--6-col-desktop">
+        <div class="mdl-card__supporting-text mdl-color-text--grey-600">
+          <ul>
+            <li>
+              <a hidden id="user-name" style="color: black; cursor:default;">Aqib</a>
+            </li>
+<!--            <li>-->
+<!--              <a style="color: black; cursor:default;">Talha</a>-->
+<!--            </li>-->
+          </ul>
+        </div>
+      </div>
+
       <div id="must-signin-snackbar" class="mdl-js-snackbar mdl-snackbar">
         <div class="mdl-snackbar__text"></div>
         <button class="mdl-snackbar__action" type="button"></button>
@@ -105,6 +95,9 @@
 <% end %>
 
 <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
+<!--<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-app.js"></script>-->
+<!--<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-auth.js"></script>-->
+<!--<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-database.js"></script>-->
 <script>
     // Initialize Firebase
     var config = {
@@ -115,5 +108,15 @@
         storageBucket: "chat-room-64cce.appspot.com",
         messagingSenderId: "126833296189"
     };
-    firebase.initializeApp(config);
+    if (!firebase.apps.length) {
+        firebase.initializeApp(config);
+    }
 </script>
+
+
+
+
+
+
+
+
