--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>StripPals</title>
-  <%= include_gon %>
+  <%#= include_gon %>
 	<%= stylesheet_link_tag    'application', media: 'all' %>
 	<%= javascript_include_tag 'application' %>
   <%= image_tag('home-favicon.ico')%>
