--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -5,3 +5,24 @@
 .text-color{
   color: #FFFFFF !important;
 }
+.image-position{
+  transform: translateX(-14%);
+}
+.text-postion{
+  text-align: left;
+}
+.font-color{
+  color: #0D0D0D;
+}
+.fade-font{
+  opacity: 0.5;
+  filter: Alpha(opacity=50);
+  font-size: 18px;
+}
+.font-length{
+  font-size: 18px;
+}
+.mdl-card__supporting-text{
+  max-height: 500px !important;
+  overflow-y: scroll !important;
+}
