--- a/app/assets/stylesheets/chats.scss
+++ b/app/assets/stylesheets/chats.scss
@@ -5,6 +5,7 @@
   -webkit-box-shadow: 0px 5px 12px -3px rgba(135,133,135,0.5);
   -moz-box-shadow: 0px 5px 12px -3px rgba(135,133,135,0.5);
   box-shadow: 0px 5px 12px -3px rgba(135,133,135,0.5);
+  padding-top: 20px;
 }
 .mdl-layout__container {
   position: relative !important;
