--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -23,7 +23,7 @@
         <p class="par-color">Please understand due to time difference allow 36 hours for response.</p>
       </div>
       <%#= form_for @contact, id: "widgetu357", class: "form-grp clearfix grpelem" do |form| %>
-      <form class="form-grp clearfix grpelem" id="widgetu357" method="post" enctype="multipart/form-data" action="scripts/form-u357.php"><!-- none box -->
+      <form class="form-grp clearfix grpelem" id="widgetu357" method="post" enctype="multipart/form-data" action=""><!-- none box -->
         <div class="fld-grp clearfix grpelem" id="widgetu368" data-required="true"><!-- none box -->
           <span class="fld-input NoWrap actAsDiv clearfix grpelem" id="u371-4"><!-- content -->
             <input class="wrapped-input" type="text" spellcheck="false" id="widgetu368_input" name="custom_U368" tabindex="1"/>
@@ -49,7 +49,7 @@
         <div class="clearfix grpelem" id="u377-4"><!-- content -->
           <p>Form received.</p>
         </div>
-        <input class="submit-btn NoWrap grpelem" id="u372-17" type="submit" value="" tabindex="5"/><!-- state-based BG images -->
+        <input class="submit-btn NoWrap grpelem" id="u372-17"  type="button" value="" tabindex="5"/><!-- state-based BG images -->
         <div class="fld-grp clearfix grpelem" id="widgetu363" data-required="false"><!-- none box -->
           <span class="fld-textarea actAsDiv clearfix grpelem" id="u365-4"><!-- content -->
               <textarea class="wrapped-input" id="widgetu363_input" name="custom_U363" tabindex="4"></textarea>
@@ -69,7 +69,7 @@
       </form>
     </div>
     <div class="verticalspacer"></div>
-    <%= render 'shared/footer' %>
+    <%#= render 'shared/footer' %>
   </div>
 </div>
 
