--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,39 @@
-<%= devise_error_messages! %>
+<div class="container">
+  <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal' }) do |f| %>
-<fieldset>
-  <legend>Signup</legend>
-
-  <div class="form-group">
-    <%= f.label :email, class: 'col-lg-2 control-label' %>
-    <div class="col-lg-4">
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", size: 10, class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password, class: 'col-lg-2 control-label' %>
-    <div class="col-lg-4">
-      <%= f.password_field :password, autocomplete: "new-password", size: 25, class: "form-control" %> <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em> <% end %>
-    </div>
-  </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal' }) do |f| %>
+  <fieldset>
+    <legend>Signup</legend>
 
     <div class="form-group">
-    <%= f.label :password_confirmation, class: 'col-lg-2 control-label' %>
-    <div class="col-lg-4">
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", size: 25, class: "form-control" %>
+      <%= f.label :email, class: 'col-md-2' %>
+      <div class="col-md-4">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", size: 10, class: "form-control" %>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <div class="col-lg-10 col-lg-offset-2">
-      <%= f.submit "Sign Up", class: 'btn btn-primary' %>   
+    <div class="form-group">
+      <%= f.label :password, class: 'col-md-2' %>
+      <div class="col-md-4">
+        <%= f.password_field :password, autocomplete: "new-password", size: 25, class: "form-control" %> <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em> <% end %>
+      </div>
     </div>
-  </div>
 
-</fieldset>
-<% end %>
+      <div class="form-group">
+      <%= f.label :password_confirmation, class: 'col-md-2' %>
+      <div class="col-md-4">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", size: 25, class: "form-control" %>
+      </div>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="form-group">
+      <div class="col-lg-10 col-lg-offset-2">
+        <%= f.submit "Sign Up", class: 'btn btn-primary' %>
+      </div>
+    </div>
+    <%= render "devise/shared/links" %>
+  </fieldset>
+  <% end %>
+
+</div>
