--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,9 +1,17 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <div class="form-group">
+    <div class="col-lg-10 col-lg-offset-2">
+         <%= link_to "Log in", new_session_path(resource_name) %><br />
+    </div>
+  </div>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <div class="form-group">
+    <div class="col-lg-10 col-lg-offset-2">
+       <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+    </div>
+  </div>
 <% end -%>
 
 <%#- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
