--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>StripPals</title>
   <%#= include_gon %>
 	<%= stylesheet_link_tag    'application', media: 'all' %>
 	<%= javascript_include_tag 'application' %>
   <%= image_tag('home-favicon.ico')%>
-  <title>Home</title>
+
 <!--  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
 <!--  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">-->
 <!--  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">-->
@@ -57,7 +60,7 @@
     }
     @font-face {
       font-family: myfont;
-      src: url("<%= asset_path('CANDARAZ.woff')%>");
+      src: url("<%= image_url('CANDARAZ.woff')%>");
     }
   </style>
 
@@ -78,7 +81,7 @@
 
 <body>
 
-	<%#= render 'layouts/nav' %>
+	<%= render 'layouts/nav' %>
 	<div class="container">
     <%# if request.env['PATH_INFO'] == chats_index_path %>
     <%#else %>
@@ -88,12 +91,12 @@
 <!--          </li>-->
         <%#end %>
     <%# end %>
-		<% if notice %>
-		  <p class="alert alert-success"><%= notice %></p>
-		<% end %>
-		<% if alert %>
-		   <p class="alert alert-danger"><%= alert %></p>
-		<% end %>
+		<%# if notice %>
+<!--		  <p class="alert alert-success"><%#= notice %></p>-->
+		<%# end %>
+		<%# if alert %>
+<!--		   <p class="alert alert-danger"><%#= alert %></p>-->
+		<%# end %>
 		<%= yield %>
 	</div>
 </body>
