--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
     <div class="SlideShowWidget clearfix colelem" id="slideshowu419"><!-- none box -->
       <div class="popup_anchor" id="u435popup">
         <div class="SlideShowContentPanel clearfix" id="u435"><!-- stack box -->
-          <div class="SSSlide clip_frame grpelem" id="u489"><!-- image -->
+          <div class="animated fadeInRight SSSlide clip_frame grpelem" id="u489"><!-- image -->
             <%= image_tag 'slide_01.jpg', width: "2000", height: "700", class: "image-position", id: "u489_img"%>
           </div>
           <div class="SSSlide invi clip_frame grpelem" id="u504"><!-- image -->
