seet width, spaces and styling

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -26,3 +26,9 @@
   max-height: 500px !important;
   overflow-y: scroll !important;
 }
+.padding{
+  padding: 42px;
+}
+//.browser_width > * {
+//  right: -260px;
+//}
