--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
   </style>
 </head>
 
-<body>
+<body style="width: 100vw; overflow-x: hidden;">
 
 	<%= render 'layouts/nav' %>
 	<div class="container">
