--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,5 @@
-<!--  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
-<!--  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">-->
-<!--  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">-->
-<!--  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>-->
-<div class="clearfix" id="page" style='min-height:500px;'><!-- column -->
+<div class="container">
+  <div class="clearfix" id="page" style='min-height:500px;'><!-- column -->
   <div class="position_content" id="page_position_content">
     <div class="browser_width colelem" id="u543-bw">
       <div id="u543"><!-- simple frame --></div>
@@ -31,8 +28,8 @@
       <div class="popup_anchor" id="u430popup">
         <div class="SlideShowCaptionPanel clearfix" id="u430"><!-- stack box -->
           <div class="SSSlideCaption clearfix grpelem" id="u495-6"><!-- content -->
-            <p><span style="color: #BF14F7;font-size: 50px;font-weight: 600;">It is a game of luck!!!!</span></p>
-            <p><span style="color: #BF14F7;font-size: 50px;font-weight: 600;">NO SKILL REQUIRED</span></p>
+            <p style="text-align: left;"><span style="color: #BF14F7;font-size: 50px;font-weight: 600;">It is a game of luck!!!!</span></p>
+            <p style="text-align: left;"><span style="color: #BF14F7;font-size: 50px;font-weight: 600;">NO SKILL REQUIRED</span></p>
           </div>
           <div class="SSSlideCaption invi clearfix grpelem" id="u510-4"><!-- content -->
             <p><span style="color: #BF14F7;font-family: 'myfont';">Play online face to face</span></p>
@@ -108,7 +105,7 @@
         <p>&nbsp;</p>
       </div>
     </div>
-    <div class="clearfix colelem" id="pu834-3"><!-- group -->
+    <div class="clearfix colelem" id="pu834-3" style="margin-left: -190px !important;"><!-- group -->
       <div class="browser_width grpelem" id="u834-3-bw">
         <div class="clearfix" id="u834-3"><!-- content -->
           <p>&nbsp;</p>
@@ -223,6 +220,7 @@
     <div class="verticalspacer"></div>
     <%= render 'shared/footer' %>
   </div>
+</div>
 </div>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
