--- a/app/views/games_master/index.html.erb
+++ b/app/views/games_master/index.html.erb
@@ -8,7 +8,7 @@
         </blockquote>
         <h1 class="text-center" style="font-size: 50px;font-family: 'myfont';"><span style="color:  #2B3856">-</span> Playing Modes <span style="color: #2C3539">-</span></h1>
         <div class="row"></div>
-        <table width="950" height="80" border="0" align="center" cellpadding="3" cellspacing="3">
+        <table width="950" height="80" border="0" align="center" cellpadding="3" cellspacing="3" class="table">
           <tbody>
           <tr>
             <td><span class="text-center" style="color: #F01616; text-align: left;" width="750">Playing Strip Me Naked only ends when one player has won enough games to strip all other players. The time taken to completion will vary depending on the playing mode.</span></td>
@@ -75,7 +75,7 @@
 <hr>
 <div class="container">
   <div class="row">
-    <div class="col-lg-4 col-md-6 col-sm-6">
+    <div class="col-lg-4 col-md-6 col-sm-6 col-sm-offset-3 col-md-offset-0">
       <h2 style="font-family: 'myfont';">Contact Us</h2>
       <address>
         <a href="mailto:GamesDirector@strippals.com" style="font-family: 'myfont';">GamesDirector@strippals.com</a><br>
