contanct us responsive

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -222,7 +222,7 @@
 <hr>
 <div class="container">
   <div class="row">
-    <div class="col-lg-4 col-md-6 col-sm-6">
+    <div class="col-lg-4 col-md-6 col-sm-6 col-sm-offset-3 col-md-offset-0">
       <h2 style="font-family: 'myfont';">Contact Us</h2>
       <address>
         <a href="mailto:GamesDirector@strippals.com" style="font-family: 'myfont';">GamesDirector@strippals.com</a><br>
