resolve error on multiple browser chat

--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -2,11 +2,11 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
 <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-database.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-storage.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-messaging.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-storage.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-messaging.js"></script>
 
 <!-- App Styling -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
@@ -68,7 +68,7 @@
         <div class="mdl-card__supporting-text mdl-color-text--grey-600">
           <ul>
             <li>
-              <a hidden id="user-name" style="color: black; cursor:default;">Aqib</a>
+              <a hidden id="user-name" style="color: black; cursor:default;"></a>
             </li>
 <!--            <li>-->
 <!--              <a style="color: black; cursor:default;">Talha</a>-->
@@ -99,7 +99,7 @@
   <%end %>
 <% end %>
 
-   
+
 
     <script>
         // Initialize Firebase
@@ -116,6 +116,9 @@
         }
     </script>
 <%= javascript_include_tag 'main.js' %>
+
+
+
 
 
 
