--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -218,7 +218,7 @@
       <%end %>
     </div>
     <div class="verticalspacer"></div>
-    <%= render 'shared/footer' %>
+    <%#= render 'shared/footer' %>
   </div>
 </div>
 </div>
