--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -203,7 +203,10 @@
       </div>
       <%=link_to  new_user_session_path , target: :_blank, class: "nonblock nontext rgba-background clearfix grpelem", id: "u826"  do %>
 <!--      <a class="nonblock nontext rgba-background clearfix grpelem" id="u826" href="chat/login.php"><!-- group -->
-        <div class="grpelem" id="u828"><!-- custom html --><i class="icon-thumbs-up-alt icon-block" style="line-height:105px;"></i></div><div class="clearfix grpelem" id="u832-6"><!-- content -->
+        <div class="grpelem" id="u828"><!-- custom html -->
+          <i class="icon-thumbs-up-alt icon-block" style="line-height:105px;"></i>
+        </div>
+        <div class="clearfix grpelem" id="u832-6"><!-- content -->
           <span>Chat</span>
           <span>Room 1</span>
         </div>
