add authentication in chat room

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -201,7 +201,7 @@
           </div>
         </div>
       </div>
-      <%=link_to  new_user_session_path , target: :_blank, class: "nonblock nontext rgba-background clearfix grpelem", id: "u826"  do %>
+      <%=link_to  chats_index_path , target: :_blank, class: "nonblock nontext rgba-background clearfix grpelem", id: "u826"  do %>
 <!--      <a class="nonblock nontext rgba-background clearfix grpelem" id="u826" href="chat/login.php"><!-- group -->
         <div class="grpelem" id="u828"><!-- custom html -->
           <i class="icon-thumbs-up-alt icon-block" style="line-height:105px;"></i>
@@ -212,7 +212,7 @@
         </div>
 <!--      </a>-->
       <%end %>
-      <%=link_to  new_user_session_path , target: :_blank, class: "nonblock nontext rgba-background clearfix grpelem", id: "u827"  do %><!-- group -->
+      <%=link_to  chats_index_path , target: :_blank, class: "nonblock nontext rgba-background clearfix grpelem", id: "u827"  do %><!-- group -->
         <div class="grpelem" id="u830"><!-- custom html --><i class="icon-flag icon-block" style="line-height:105px;"></i></div><div class="clearfix grpelem" id="u833-6"><!-- content -->
           <span>Chat</span>
           <span>Room 2</span>
