--- a/app/views/games_master/index.html.erb
+++ b/app/views/games_master/index.html.erb
@@ -28,14 +28,14 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-6">
-      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><%=link_to "ACE Playing Modes", entries_index_path, target: :_blank %></h2>
+      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><%=link_to "Playing Modes", entries_index_path, target: :_blank %></h2>
       <p>Five Games</p>
       <p>The first player to win three games is the winner and the other player must strip.</p>
       <p>Second Chance.</p>
       <p>Two more games are available for the losing player to get even!! Or to play another mode.</p>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-6">
-      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><%=link_to "ACE KING Playing Mode", entries_index_path, target: :_blank %></h2>
+      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><%=link_to "KING Playing Mode", entries_index_path, target: :_blank %></h2>
       <p>Three Games</p>
       <p>The first player to win two games is the winner and the other player must strip.</p>
       <p>Second Chance.</p>
