--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,15 +1,11 @@
-@import "bootstrap";
-.m-body { padding-top: 120px; }
 @import "base";
-@import "index.css";
-@import "master_a-master.css";
-@import "site_global.css";
 @import "font-awesome.min.css";
 @import "font-awesome-ie7.min.css";
-@import "master_b-master.css";
-@import "contacts.css";
-@import "bootstrap.css";
 @import "main.css";
 @import "chats.scss";
 @import "animate.min.css";
+@import "home_page";
+@import "entries.scss";
+@import "games_master.scss";
+@import "contact.scss";
 
