--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,250 +1,172 @@
-<div class="container">
+<div class="container-fluid upper-container">
   <div class="row">
-    <div class="col-lg-12">
-      <div class="jumbotron">
-        <blockquote>
-          <p><%= image_tag 'BackG.jpg', width: "1000", height: "200", class: "img-responsive"%></p>
-        </blockquote>
-        <h1 class="text-center" style="font-size: 50px;font-family: 'myfont';"><span style="color: #151B54">-</span> Strip Poker site for AMATEURS <span style="color: #F01215">-</span></h1>
-        <div class="row"></div>
-        <p class="text-center" style="color: #0D0D0D;font-family: 'myfont';" >Listed below are key elements for our site and a list of charges for our players. For as <span style="color: #F01215"><strong>little as 2c a minute with the total game cost about 20c, </strong></span> players can be assured of getting value for money. To be fair to players who play regularly their rate is even cheaper. </p>
-        <p class="text-center" style="font-family: 'myfont';">CAN YOU AFFORD A FEW CENTS FOR SOME ADULT ENTERTAINMENT?</p>
+    <div class="jumbotron">
+      <div class="row">
+        <div class="col-12 upper-img">
+<!--          <img src="slide_02.jpg" class="img-responsive">-->
+          <%= image_tag 'slide_01.jpg', class: "img-responsive"%>
+        </div>
       </div>
+      <div class="row upper-text">
+        <h1 class="upper-h1 col-12 text-center">- Strip Poker site for AMATEURS -</h1>
+        <p class="upper-paragraph text-center">Listed below are key elements for our site and a list of charges for our players. For as
+          <span style="color:#e82424">little as 2c a minute with the total game cost about 20c,</span> players can be assured of getting
+          value for money. To be fair to players who play regularly their rate is even cheaper.</p>
+        <br>
+
+      </div>
+      <p class="upper-paragraph text-center">
+        <span style="color:#2440c0;">CAN YOU AFFORD A FEW CENTS FOR SOME ADULT ENTERTAINMENT?</span>
+      </p>
+
     </div>
   </div>
-</div>
-<div class="container">
-  <div class="row"></div>
 </div>
 <hr>
-<div class="container">
+
+<div class="container bottom-container">
   <div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-6">
-      <h2 style="font-family: 'myfont';"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> No Contracts</h2>
-      <p style="font-family: 'myfont';" class="justify">There are no contracts that auto renew as we consider this very unbusinessman like. You buy the amount of time you can afford. To be fair there are discounts for big time users.</p>
+    <div class="col-lg-3 col-md-6 col-12 mid-data">
+      <h2>
+<!--        <img src="pencil-60-119100.png" class="mid-icons">-->
+        <%= image_tag 'pencil-60-119100.png', class: "mid-icons"%>
+        No Contracts
+      </h2>
+      <p style="color:#2440c0;">There are no contracts that auto renew as we consider this very unbusinessman like. You buy the amount of
+        time you can afford. To be fair there are discounts for big time users.</p>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-6">
-      <h2 style="font-family: 'myfont';"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Secure</h2>
-      <p style="font-family: 'myfont';" class="justify">Your privacy is our main concern, your registration details will not be sold or used in any way to promote products even our own products.You can find out about our deals by visiting our site.</p>
+    <div class="col-lg-3 col-md-6 col-12 mid-data">
+      <h2>
+<!--        <img src="pencil-60-119100.png" class="mid-icons"> -->
+        <%= image_tag 'pencil-60-119100.png', class: "mid-icons"%>
+        Secure
+      </h2>
+      <p style="color:#2440c0;">Your privacy is our main concern, your registration details will not be sold or used in any way to promote
+        products even our own products.You can find out about our deals by visiting our site.</p>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-6">
-      <h2 style="font-family: 'myfont';"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Personal</h2>
-      <p style="font-family: 'myfont';" class="justify">Personal customer service is what we will strive to achieve. Being a international web site we will not be available at some time. We will endeavour to contact you at our earliest convenience.</p>
+    <div class="col-lg-3 col-md-6 col-12 mid-data">
+      <h2>
+<!--        <img src="pencil-60-119100.png" class="mid-icons">-->
+        <%= image_tag 'pencil-60-119100.png', class: "mid-icons"%>
+        Personal
+      </h2>
+      <p style="color:#2440c0;">Personal customer service is what we will strive to achieve. Being a international web site we will not be
+        available at some time. We will endeavour to contact you at our earliest convenience.</p>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-6">
-      <h2 style="font-family: 'myfont';"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Professional</h2>
-      <p style="font-family: 'myfont';" class="justify">We will conduct ourselves professionally in our dealings with members. We ask members to act professionally to each other as well. Non compliance will not be tolerated.</p>
+    <div class="col-lg-3 col-md-6 col-12 mid-data">
+
+      <h2>
+<!--        <img src="pencil-60-119100.png" class="mid-icons">-->
+        <%= image_tag 'pencil-60-119100.png', class: "mid-icons"%>
+        Professional
+      </h2>
+      <p style="color:#2440c0;">We will conduct ourselves professionally in our dealings with members. We ask members to act professionally
+        to each other as well. Non compliance will not be tolerated.</p>
     </div>
   </div>
-  <p>&nbsp;</p>
-  <div class="container">
-    <div class="row">
-      <h1 style="font-family: 'myfont';">Pricing Table - <em style="color: #F01215; font-size: 24px; text-align: center;">Please choose a playing mode keeping in mind a game can take between 3 to 15 mins to finish.</em></h1>
-      <hr>
-      <div class="col-lg-3 col-sm-6">
-        <div class="panel panel-default panel-success">
-          <!-- Default panel contents -->
-          <div class="panel-heading">
-            <h3 style="font-family: 'myfont';" align="center">Ace of Spades</h3>
-          </div>
-          <!-- Table -->
-          <table class="table">
-            <thead>
-            <tr>
-              <th class="cnt">Playing Time</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <th scope="row" class="cnt">5 games <br/> <strong>US$0.50</strong></th>
-            </tr>
-            <tr> </tr>
-            <tr> </tr>
-            <tr>
-              <th scope="row" class="cnt"><p>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                  <input type="hidden" name="cmd" value="_xclick">
-                  <input type="hidden" name="business" value="tutor@pmarpl.com.au">
-                  <input type="hidden" name="lc" value="AU">
-                  <input type="hidden" name="item_name" value="Interested User">
-                  <input type="hidden" name="amount" value="0.05">
-                  <input type="hidden" name="currency_code" value="USD">
-                  <input type="hidden" name="button_subtype" value="services">
-                  <input type="hidden" name="no_note" value="0">
-                  <input type="hidden" name="shipping" value="0.00">
-                  <input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynowCC_LG.gif:NonHostedGuest">
-                  <input type="image" src="https://www.paypalobjects.com/en_AU/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
-                  <img alt="" border="0" src="https://www.paypalobjects.com/en_AU/i/scr/pixel.gif" width="1" height="1">
-                </form>
-                </th>
-            </tr>
-            </tbody>
-          </table>
+  <div class="row">
+    <div class="col-12 line--style">
+      <h1 style="font-family: 'Acme', sans-serif;">Pricing Table -
+        <em style="color: #F01215; font-size: 24px; text-align: center;">Please choose a playing mode keeping in mind a game can take between 3 to 15 mins to finish.</em>
+      </h1>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-lg-3 col-md-6 col-12 data-panels">
+      <div class="card green-card">
+        <div class="card-header green-panel">
+          Ace Of Spades
         </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Playing Time</li>
+          <li class="list-group-item">5 games
+            <br>
+            <strong>US$0.50</strong>
+          </li>
+          <li class="list-group-item">
+            <a href="https://www.paypal.com/cgi-bin/webscr" target="_blank">
+              <%= image_tag 'btn_buynowCC_LG.gif'%>
+            </a>
+
+          </li>
+        </ul>
       </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="panel panel-default panel-warning">
-          <!-- Default panel contents -->
-          <div class="panel-heading">
-            <h3 style="font-family: 'myfont';" align="center">King of Spades</h3>
-          </div>
-          <!-- Table -->
-          <table class="table">
-            <thead>
-            <tr>
-              <th class="cnt">Playing Time</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <th scope="row" class="cnt">3 games <br/> <strong>US$0.40</strong></th>
-            </tr>
-            <tr> </tr>
-            <tr> </tr>
-            <tr>
-              <th scope="row" class="cnt"><p>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                  <input type="hidden" name="cmd" value="_xclick">
-                  <input type="hidden" name="business" value="tutor@pmarpl.com.au">
-                  <input type="hidden" name="lc" value="AU">
-                  <input type="hidden" name="item_name" value="Regular User">
-                  <input type="hidden" name="amount" value="0.40">
-                  <input type="hidden" name="currency_code" value="USD">
-                  <input type="hidden" name="button_subtype" value="services">
-                  <input type="hidden" name="no_note" value="0">
-                  <input type="hidden" name="shipping" value="0.00">
-                  <input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynowCC_LG.gif:NonHostedGuest">
-                  <input type="image" src="https://www.paypalobjects.com/en_AU/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
-                  <img alt="" border="0" src="https://www.paypalobjects.com/en_AU/i/scr/pixel.gif" width="1" height="1">
-                </form>
-                </p>
-              </th>
-            </tr>
-            </tbody>
-          </table>
+    </div>
+    <div class="col-lg-3 col-md-6 col-12 data-panels">
+      <div class="card un-card">
+        <div class="card-header un-panel">
+          King Of Spades
         </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Playing Time</li>
+          <li class="list-group-item">3 games
+            <br>
+            <strong>US$0.50</strong>
+          </li>
+          <li class="list-group-item">
+<!--            <img src="btn_buynowCC_LG.gif" alt="">-->
+            <a href="https://www.paypal.com/cgi-bin/webscr" target="_blank">
+              <%= image_tag 'btn_buynowCC_LG.gif'%>
+            </a>
+          </li>
+        </ul>
       </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="panel panel-default panel-info">
-          <!-- Default panel contents -->
-          <div class="panel-heading">
-            <h3 style="font-family: 'myfont';" align="center">Queen of Spades</h3>
-          </div>
-          <!-- Table -->
-          <table class="table">
-            <thead>
-            <tr>
-              <th class="cnt">Playing Time</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <th scope="row" class="cnt">2 Games <br/><strong>US$0.30</strong></th>
-            </tr>
-            <tr> </tr>
-            <tr> </tr>
-            <tr>
-              <th scope="row" class="cnt"><p>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                  <input type="hidden" name="cmd" value="_xclick">
-                  <input type="hidden" name="business" value="tutor@pmarpl.com.au">
-                  <input type="hidden" name="lc" value="AU">
-                  <input type="hidden" name="item_name" value="Moderate User">
-                  <input type="hidden" name="amount" value="0.30">
-                  <input type="hidden" name="currency_code" value="USD">
-                  <input type="hidden" name="button_subtype" value="services">
-                  <input type="hidden" name="no_note" value="0">
-                  <input type="hidden" name="shipping" value="0.00">
-                  <input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynowCC_LG.gif:NonHostedGuest">
-                  <input type="image" src="https://www.paypalobjects.com/en_AU/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
-                  <img alt="" border="0" src="https://www.paypalobjects.com/en_AU/i/scr/pixel.gif" width="1" height="1">
-                </form>
-                </th>
-            </tr>
-            </tbody>
-          </table>
+    </div>
+    <div class="col-lg-3 col-md-6 col-12 data-panels">
+      <div class="card blue-card">
+        <div class="card-header blue-panel">
+          Queen Of Spades
         </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Playing Time</li>
+          <li class="list-group-item">2 games
+            <br>
+            <strong>US$0.50</strong>
+          </li>
+          <li class="list-group-item">
+<!--            <img src="btn_buynowCC_LG.gif" alt="">-->
+            <a href="https://www.paypal.com/cgi-bin/webscr" target="_blank">
+               <%= image_tag 'btn_buynowCC_LG.gif'%>
+            </a>
+          </li>
+        </ul>
       </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="panel panel-default panel-danger">
-          <!-- Default panel contents -->
-          <div class="panel-heading">
-            <h3 style="font-family: 'myfont';" align="center">Jack of Spades</h3>
-          </div>
-          <!-- Table -->
-          <table class="table">
-            <thead>
-            <tr>
-              <th class="cnt">Playing Time</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <th scope="row" class="cnt">1 Game <br/><strong>US$0.20</strong></th>
-            </tr>
-            <tr> </tr>
-            <tr> </tr>
-            <tr>
-              <th scope="row" class="cnt"><p>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                  <input type="hidden" name="cmd" value="_xclick">
-                  <input type="hidden" name="business" value="tutor@pmarpl.com.au">
-                  <input type="hidden" name="lc" value="AU">
-                  <input type="hidden" name="item_name" value="Heavy User">
-                  <input type="hidden" name="amount" value="0.20">
-                  <input type="hidden" name="currency_code" value="USD">
-                  <input type="hidden" name="button_subtype" value="services">
-                  <input type="hidden" name="no_note" value="0">
-                  <input type="hidden" name="shipping" value="0.00">
-                  <input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynowCC_LG.gif:NonHostedGuest">
-                  <input type="image" src="https://www.paypalobjects.com/en_AU/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
-                  <img alt="" border="0" src="https://www.paypalobjects.com/en_AU/i/scr/pixel.gif" width="1" height="1">
-                </form>
-                </th>
-            </tr>
-            </tbody>
-          </table>
+    </div>
+    <div class="col-lg-3 col-md-6 col-12 data-panels">
+      <div class="card dark-card">
+        <div class="card-header dark-panel">
+          Jack Of Spades
         </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Playing Time</li>
+          <li class="list-group-item">1 games
+            <br>
+            <strong>US$0.50</strong>
+          </li>
+          <li class="list-group-item">
+<!--            <img src="btn_buynowCC_LG.gif" alt="">-->
+            <a href="https://www.paypal.com/cgi-bin/webscr" target="_blank">
+              <%= image_tag 'btn_buynowCC_LG.gif'%>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
-  <p>&nbsp;</p>
+</div>
+<hr>
+
+<div class="row">
+  <div class="col-12 footer-data">
+    <div class="tp--mid">
+      <h1 class="contact">Contact Us</h1>
+      <br>
+      <h3 class="mail">GamesDirector@strippals.com</h3>
+      <h3 class="mail">admin@strippals.com</h3>
+      <h3 class="mail">help@strippals.com</h3>
+    </div>
+  </div>
 </div>
 
-<section class="well">
-  <div class="container">
-    <div class="row"></div>
-  </div>
-</section>
-<div class="container">
-  <div class="row"></div>
-</div>
 <hr>
-<div class="container">
-  <div class="row">
-    <div class="col-lg-4 col-md-6 col-sm-6 col-sm-offset-3 col-md-offset-0">
-      <h2 style="font-family: 'myfont';">Contact Us</h2>
-      <address>
-        <a href="mailto:GamesDirector@strippals.com" style="font-family: 'myfont';">GamesDirector@strippals.com</a><br>
-        <a href="mailto:admin@strippals.com" style="font-family: 'myfont';">admin@strippals.com</a><br>
-        <a href="mailto:help@strippals.com " style="font-family: 'myfont';">help@strippals.com </a>
-      </address>
-      <address>
-        &nbsp;
-      </address>
-      <div class="row">
-        <div class="col-xs-2"></div>
-      </div>
-    </div>
-  </div>
-</div>
-<hr>
-<footer class="text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <p style="font-family: 'myfont';">Copyright © Strip-Pals. All rights reserved.</p>
-      </div>
-    </div>
-  </div>
-</footer>
