--- a/app/views/games_master/index.html.erb
+++ b/app/views/games_master/index.html.erb
@@ -1,103 +1,121 @@
-<div class="container">
+<div class="container-fluid upper-container">
   <div class="row">
-    <div class="col-lg-12">
-      <div class="jumbotron">
-        <blockquote>
-<!--          <p><img src="images/BackG.jpg" alt="" width="1200" height="400" class="img-responsive"/>-->
-           <%= image_tag 'BackG.jpg', width: "1000", height: "400", class: "img-responsive"%>
-        </blockquote>
-        <h1 class="text-center" style="font-size: 50px;font-family: 'myfont';"><span style="color:  #2B3856">-</span> Playing Modes <span style="color: #2C3539">-</span></h1>
-        <div class="row"></div>
-        <table width="950" height="80" border="0" align="center" cellpadding="3" cellspacing="3" class="table">
-          <tbody>
-          <tr>
-            <td><span class="text-center" style="color: #F01616; text-align: left;" width="750">Playing Strip Me Naked only ends when one player has won enough games to strip all other players. The time taken to completion will vary depending on the playing mode.</span></td>
-            <td><span class="text-center">To ensure that Strip Pals is enjoyable and affordable it is important to the site owners that it provides real value for money. To achieve this and to cater for all the players 4 different levels of playing modes were devised.</spanstyle ="color: #F01616></span>-</td>
-              <td><span class="text-center">It is strongly stressed that this is a action driven by the site owners via the Games Master and players can still opt for the own version of playing.</span></td>
-          </tr>
-          </tbody>
-        </table>
+    <div class="jumbotron">
+      <div class="row">
+        <div class="col-12 upper-img">
+<!--          <img src="slide_02.jpg" class="img-responsive">-->
+          <%= image_tag 'slide_01.jpg', class: "img-responsive"%>
+        </div>
       </div>
+      <div class="row upper-txt">
+        <h1 class="upper-h1 col-12 text-center">- Playing Modes -</h1>
+
+        <div class="row">
+          <div class="col-lg-4  col-12 " style="color:#ff1818">
+            <p>Playing Strip Me Naked only ends when one player has won enough games to strip all other players.
+              The time taken to completion will vary depending on the playing mode.</p>
+          </div>
+          <div class="col-lg-4  col-12">
+            <p>To ensure that Strip Pals is enjoyable and affordable it is important to the site owners that
+              it provides real value for money. To achieve this and to cater for all the players 4 different
+              levels of playing modes were devised.- </p>
+          </div>
+          <div class="col-lg-4  col-12">
+            <p>It is strongly stressed that this is a action driven by the site owners via the Games Master
+              and players can still opt for the own version of playing.
+            </p>
+          </div>
+
+        </div>
+
+
+      </div>
+
+
     </div>
   </div>
-</div>
-<div class="container">
-  <div class="row"></div>
 </div>
 <hr>
-<div class="container">
+
+<div class="container bottom-container">
   <div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-6">
-      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><%=link_to "Playing Modes", entries_index_path, target: :_blank %></h2>
-      <p>Five Games</p>
-      <p>The first player to win three games is the winner and the other player must strip.</p>
-      <p>Second Chance.</p>
-      <p>Two more games are available for the losing player to get even!! Or to play another mode.</p>
+    <div class="col-lg-3 col-md-6 col-12 mid-data">
+      <h2 class="text-center heading-data">
+<!--        <img src="pencil-60-119100.png" class="mid-icons">-->
+        <%= image_tag 'pencil-60-119100.png', class: "mid-icons"%>
+        <%=link_to "Playing Modes", entries_index_path, target: :_blank %>
+      </h2>
+
+      <p style="color:#2440c0;" class="text-center lines-data">Five Games</p>
+
+      <p style="color:#2440c0;" class="text-center lines-data">The first player to win three games is the winner and the other player must strip.</p>
+      <p style="color:#2440c0;" class="text-center lines-data">Second Chance.</p>
+      <p style="color:#2440c0;" class="text-center lines-data">Two more games are available for the losing player to get even!! Or to play another mode.</p>
+
+
+
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-6">
-      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><%=link_to "KING Playing Mode", entries_index_path, target: :_blank %></h2>
-      <p>Three Games</p>
-      <p>The first player to win two games is the winner and the other player must strip.</p>
-      <p>Second Chance.</p>
-      <p>Another game is available for the losing player to get even!! Or to play another mode</p>
+    <div class="col-lg-3 col-md-6 col-12 mid-data">
+      <h2 class="text-center heading-data">
+<!--        <img src="pencil-60-119100.png" class="mid-icons">-->
+        <%= image_tag 'pencil-60-119100.png', class: "mid-icons"%>
+        <%=link_to "King Playing Mode", entries_index_path, target: :_blank %>
+      </h2>
+
+      <p style="color:#2440c0;" class="text-center lines-data">Three Games</p>
+      <p style="color:#2440c0;" class="text-center lines-data">The first player to win two games is the winner and the other player must strip.</p>
+      <p style="color:#2440c0;" class="text-center lines-data">Second Chance.</p>
+      <p style="color:#2440c0;" class="text-center lines-data">Another game is available for the losing player to get even!! Or to play another mode
+
+      </p>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-6">
-      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><%=link_to "Queen Playing Mode", entries_index_path, target: :_blank %></h2>
-      <p>Two Games</p>
-      <p>Each player wears one piece of clothing and the losing player removes that piece of clothing after each losing  hand.</p>
-      <p>Second Chance.</p>
-      <p>A second game is available for the losing player to get even!! </p>
+    <div class="col-lg-3 col-md-6 col-12 mid-data">
+      <h2 class="text-center heading-data">
+<!--        <img src="pencil-60-119100.png" class="mid-icons">-->
+        <%= image_tag 'pencil-60-119100.png', class: "mid-icons"%>
+        <%=link_to "Queen Playing Mode", entries_index_path, target: :_blank %>
+      </h2>
+
+      <p style="color:#2440c0;" class="text-center lines-data">Two Games</p>
+      <p style="color:#2440c0;" class="text-center lines-data">Each player wears one piece of clothing and the losing player removes that piece of clothing after each losing
+        hand.</p>
+      <p style="color:#2440c0;" class="text-center lines-data">Second Chance.</p>
+      <p style="color:#2440c0;" class="text-center lines-data">A second game is available for the losing player to get even!!</p>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-6">
-      <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><a href="entry.html" target="_blank">JACK Playing mode</a></h2>
-      <p>Tournament</p>
-      <p>Each player wears one piece of clothing and the losing player removes that piece of clothing after each losing  hand.</p>
+    <div class="col-lg-3 col-md-6 col-12 mid-data">
+
+      <h2 class="text-center heading-data">
+<!--        <img src="pencil-60-119100.png" class="mid-icons">-->
+        <%= image_tag 'pencil-60-119100.png', class: "mid-icons"%>
+        <%=link_to "Jack Playing Mode", entries_index_path, target: :_blank %>
+      </h2>
+
+      <p style="color:#2440c0;" class="text-center lines-data">Tournament</p>
+      <p style="color:#2440c0;" class="text-center lines-data">Each player wears one piece of clothing and the losing player removes that piece of clothing after each losing
+        hand.</p>
     </div>
   </div>
-  <p>&nbsp;</p>
-  <div class="container">
-    <div class="row">
-      <h1 style="font-size: 20px;color: #FF0000;font-family: 'myfont'; text-align: center;">These playing modes have been developed to be fair, cost effective and challenging for players. Please ensure the playing mode is communicated to all players before commencing playing.</h1>
-      <hr>
+  <div class="row">
+    <div class="col-12 text-center last-line">These playing modes have been developed to be fair, cost effective and challenging for players. Please ensure
+      the playing mode is communicated to all players before commencing playing.
     </div>
   </div>
-  <p>&nbsp;</p>
 </div>
 
-<section class="well">
-  <div class="container">
-    <div class="row"></div>
-  </div>
-</section>
-<div class="container">
-  <div class="row"></div>
-</div>
 <hr>
-<div class="container">
-  <div class="row">
-    <div class="col-lg-4 col-md-6 col-sm-6 col-sm-offset-3 col-md-offset-0">
-      <h2 style="font-family: 'myfont';">Contact Us</h2>
+
+<div class="row">
+  <div class="col-12 footer-data">
+    <div class="tp--mid">
+      <h1 class="contact">Contact Us</h1>
+      <br>
       <address>
-        <a href="mailto:GamesDirector@strippals.com" style="font-family: 'myfont';">GamesDirector@strippals.com</a><br>
-        <a href="mailto:admin@strippals.com" style="font-family: 'myfont';">admin@strippals.com</a><br>
-        <a href="mailto:help@strippals.com " style="font-family: 'myfont';">help@strippals.com </a>
+        <a href="mailto:GamesDirector@strippals.com" class="mail">GamesDirector@strippals.com</a><br>
+        <a href="mailto:admin@strippals.com" class="mail">admin@strippals.com</a><br>
+        <a href="mailto:help@strippals.com" class="mail">help@strippals.com</a>
       </address>
-      <address>
-        &nbsp;
-      </address>
-      <div class="row">
-        <div class="col-xs-2"></div>
-      </div>
     </div>
   </div>
 </div>
+
 <hr>
-<footer class="text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <p style="font-family: 'myfont';">Copyright © Strip-Pals. All rights reserved.</p>
-      </div>
-    </div>
-  </div>
-</footer>
