--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,85 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>StripPals</title>
   <%#= include_gon %>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
 	<%= stylesheet_link_tag    'application', media: 'all' %>
 	<%= javascript_include_tag 'application' %>
   <%= image_tag('home-favicon.ico')%>
-
-<!--  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
-<!--  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">-->
-<!--  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">-->
-<!--  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>-->
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <style type="text/css">
-    .justify {
-      text-align: justify;
-      text-justify: inter-word;
-    }
-  </style>
-  <style type="text/css">
-    .cnt{
-      text-align: center;
-      text-justify: inter-word;
-    }
-  </style>
-  <script type="text/javascript">
-      document.documentElement.className += ' js';
-  </script>
-  <![endif]-->
-  <!--custom head HTML-->
-  <script>
-      ;
-      (function ($) {
-          var o = $('html');
-          if (o.hasClass('desktop')) {
-              include('jquery.mousewheel.min.js');
-              include('jquery.simplr.smoothscroll.min.js');
-
-              $(document).ready(function () {
-                  $.srSmoothscroll({
-                      step: 150,
-                      speed: 800
-                  });
-              });
-          }
-      })(jQuery);
-  </script>
-
-  <style>
-    a, div, p, h1, h2, h3, h4, h5, .Button, img, .submit-btn {
-      -moz-transition: 0.6s;
-      -o-transition: 0.6s;
-      -webkit-transition: 0.6s;
-      transition: 0.6s;
-    }
-    @font-face {
-      font-family: myfont;
-      src: url("<%= image_url('CANDARAZ.woff')%>");
-    }
-  </style>
-
-  <!--HTML Widget code-->
-
-  <!--[if gte IE 8] -->
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
-  <!-- <![endif]-->
-  <!--[if IE 7]>
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome-ie7.min.css" rel="stylesheet">
-  <![endif]-->
-  <style>
-    .icon-block:before, .icon-block {
-      display: block;
-    }
-  </style>
 </head>
 
-<body style="width: 100vw; overflow-x: hidden;">
+<body >
 
 	<%= render 'layouts/nav' %>
-	<div class="container">
+<!--	<div class="container">-->
     <%# if request.env['PATH_INFO'] == chats_index_path %>
     <%#else %>
         <%# if user_signed_in? %>
@@ -95,6 +33,6 @@
 <!--		   <p class="alert alert-danger"><%#= alert %></p>-->
 		<%# end %>
 		<%= yield %>
-	</div>
+<!--	</div>-->
 </body>
 </html>
